Updated project.ipynb with new edits

--- a/project.ipynb
+++ b/project.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
+    "import numpy as np\n",
     "\n",
     "# Load the data (replace with actual file paths if needed)\n",
     "mouse_metadata = pd.read_csv(r'C:\\Users\\preit\\OneDrive\\Desktop\\matpotlib_challenge\\Mouse_metadata.csv')\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +195,7 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +436,7 @@
        "<Axes: title={'center': 'Number of Mice per Drug Regimen'}, xlabel='Drug Regimen'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -564,18 +565,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m     tumor_data\u001b[38;5;241m.\u001b[39mappend(drug_data)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# Calculate quartiles and IQR\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m quartiles \u001b[38;5;241m=\u001b[39m [np\u001b[38;5;241m.\u001b[39mpercentile(data, [\u001b[38;5;241m25\u001b[39m, \u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m75\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m data \u001b[38;5;129;01min\u001b[39;00m tumor_data]\n\u001b[0;32m     17\u001b[0m IQR \u001b[38;5;241m=\u001b[39m [q[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m-\u001b[39m q[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m q \u001b[38;5;129;01min\u001b[39;00m quartiles]\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Determine potential outliers\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Capomulin': 18    25.472143\n",
+      "19    23.343598\n",
+      "Name: Tumor Volume (mm3), dtype: float64, 'Ramicane': 9    22.050126\n",
+      "Name: Tumor Volume (mm3), dtype: float64, 'Infubinol': Series([], Name: Tumor Volume (mm3), dtype: float64), 'Ceftamin': Series([], Name: Tumor Volume (mm3), dtype: float64)}\n"
      ]
     }
    ],
@@ -621,14 +621,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\preit\\AppData\\Local\\Temp\\ipykernel_23304\\677847718.py:3: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\preit\\AppData\\Local\\Temp\\ipykernel_20576\\677847718.py:3: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  box_plot = plt.boxplot(tumor_data, vert=True, patch_artist=True, labels=promising_treatments)\n"
      ]
     },
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -764,19 +764,23 @@
    "source": [
     "\n",
     "\n",
+    "from scipy.stats import linregress\n",
+    "\n",
+    "# Assuming you have the 'Capomulin' treatment data already in a DataFrame\n",
+    "capomulin_df = cleaned_df[cleaned_df['Drug Regimen'] == 'Capomulin']\n",
     "# Calculate correlation\n",
-    "correlation = capomulin_data[\"Weight (g)\"].corr(capomulin_data[\"Tumor Volume (mm3)\"])\n",
+    "correlation = capomulin_df[\"Weight (g)\"].corr(capomulin_df[\"Tumor Volume (mm3)\"])\n",
     "print(f\"Correlation coefficient: {correlation}\")\n",
     "\n",
     "# Perform linear regression\n",
-    "slope, intercept, r_value, p_value, std_err = linregress(capomulin_data[\"Weight (g)\"], capomulin_data[\"Tumor Volume (mm3)\"])\n",
+    "slope, intercept, r_value, p_value, std_err = linregress(capomulin_df[\"Weight (g)\"], capomulin_df[\"Tumor Volume (mm3)\"])\n",
     "\n",
     "# Generate the linear regression line\n",
-    "regression_line = slope * capomulin_data[\"Weight (g)\"] + intercept\n",
+    "regression_line = slope * capomulin_df[\"Weight (g)\"] + intercept\n",
     "\n",
     "# Scatter plot with regression line\n",
-    "plt.scatter(capomulin_data[\"Weight (g)\"], capomulin_data[\"Tumor Volume (mm3)\"])\n",
-    "plt.plot(capomulin_data[\"Weight (g)\"], regression_line, color='red')\n",
+    "plt.scatter(capomulin_df[\"Weight (g)\"], capomulin_df[\"Tumor Volume (mm3)\"])\n",
+    "plt.plot(capomulin_df[\"Weight (g)\"], regression_line, color='red')\n",
     "plt.title('Weight vs Tumor Volume (Capomulin) with Regression Line')\n",
     "plt.xlabel('Weight (g)')\n",
     "plt.ylabel('Tumor Volume (mm3)')\n",
